# goodfirms-agent

./: .gitignore  CLAUDE.md  goodfirms-agent  initial-plan-and-research.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
backend/: .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260311_0001_create_agent_runs.py  20260311_0002_add_tool_traces_to_agent_runs.py  20260311_0003_add_decision_summary_to_agent_runs.py  20260311_0004_add_final_decision_to_agent_runs.py  20260312_0005_add_llm_usage_to_agent_runs.py  20260312_0006_add_reviewer_feedback_to_agent_runs.py
backend/app/: main.py
backend/app/core/: config.py  logging.py
backend/app/db/: mongo.py  mysql.py  postgres.py
backend/app/db/models/: __init__.py  agent_run.py
backend/app/db/repositories/: __init__.py  agent_runs.py  service_reviews.py  software_reviews.py  users.py
backend/app/domain/context/: __init__.py  markdown.py  models.py  projections.py  software.py  utils.py
backend/app/schemas/: software_review_agent.py
backend/app/services/: agent_tool_runner.py  apollo_identity.py  contactout_identity.py  hunter_identity.py  openrouter_usage.py  public_web_search.py  reviewer_history.py  service_review_agent.py  service_review_context.py  software_review_agent.py  software_review_context.py
context-planning/: service-context-template.xml  software-context-template.xml  software-unified-context-template.txt
data/: gold_review_dataset.toml  software_reviews_page2.json
docs/: Goodfirms Review Agent.txt  (+8 more)
(+128 files in other folders)
