[project]
name = "goodfirms-backend"
version = "0.1.0"
description = "FastAPI backend for GoodFirms review agent"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = false

[tool.uvicorn]
factory = false
