[project]
name = "goodfirms-backend"
version = "0.1.0"
description = "FastAPI backend for GoodFirms review agent"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langsmith>=0.4.18",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.2.10",
    "pymongo>=4.11,<4.13",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = false

[tool.uvicorn]
factory = false
